hphp/hack/test/typecheck/fc_enum_18.php.like_types.exp
File "fc_enum_18.php", line 6, characters 3-5:
Constant does not match the type of the enum it is in (Typing[4110])
File "fc_enum_18.php", line 3, characters 9-11:
Expected int
File "fc_enum_18.php", line 6, characters 9-29:
But got dynamic because this is the result of a bitwise operation with all arguments typed dynamic
